[bugfix/21883] adjustment alignment client andress

--- a/sass/vtex.my-account.scss
+++ b/sass/vtex.my-account.scss
@@ -941,3 +941,7 @@
     padding: 10px 0 0;
   }
 }
+
+:global(.vtex-my-account-1-x-addressBox){
+  transform: translateY(26px);
+}
